# SGFS

./: CMakeLists.txt
documentation/: general.md
resources/configurations/: theme.yaml
src/: Button.cpp  Button.h  Label.cpp  Label.h  Window.cpp  Window.h  commonFunction.cpp  commonFunction.h  main.cpp
src/FrameWork/: Game.cpp  Game.h  Timer.cpp  Timer.h
src/examples/: example1.cpp
